--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = [
-    "numpy>=2.2.2",
-    "rich>=13.9.4",
-]
+dependencies = ["numpy>=2.2.4", "rich>=13.9.4"]
+
+[tool.uv.workspace]
+members = ["Genetic_Algorithm", "Multiobjective_Problem"]
